--- a/.msmtprc
+++ b/.msmtprc
@@ -11,6 +11,6 @@ port 587
 from janus.wel.3@gmail.com
 auth on
 user janus.wel.3@gmail.com
-password yag83d0180
+password secret
 # Set a default account
 account default : gmail
