--- a/.screenrc
+++ b/.screenrc
@@ -1,6 +1,6 @@
 # .screenrc
 # Maintainer:   janus_wel <janus.wel.3@gmail.com>
-# Last Change:  2009/11/11 03:48:57.
+# Last Change:  2009/11/11 04:16:18.
 
 autodetach on
 bell_msg "^G"
@@ -11,7 +11,7 @@ defscrollback 10000
 escape ^Jj
 startup_message off
 vbell off
-caption always "%{= wb} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wk} [%l] %{=b wb}%y/%m/%d(%D) %{=b wm}%c"
+caption always "%{= wb} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wk} [%l] %{=b wb}%y/%m/%d %c"
 bind n screen
 bind h prev
 bind l next
