--- a/.screenrc
+++ b/.screenrc
@@ -1,8 +1,8 @@
 # .screenrc
 # Maintainer:   janus_wel <janus.wel.3@gmail.com>
-# Last Change:  2009/11/11 04:35:28.
+# Last Change:  2009/11/11 04:40:41.
 
-# general
+# general {{{1
 # for safety
 autodetach on
 
@@ -10,20 +10,20 @@ autodetach on
 # default encoding for new window
 defencoding UTF-8
 
-# window settings
+# window settings {{{1
 # default lines of scroll-backing for new window
 defscrollback 10000
 
-# display
+# display {{{1
 startup_message off
 
-# bell
+# bell {{{2
 # ring bell by termcap setting
 bell_msg "^G"
 # not use visual bell
 vbell off
 
-# caption
+# caption {{{2
 # display caption to show informations about windows, load average and time, at any time
 # %{= wb}   : bg is white and fg is blue
 # %-w       : number and title at left ( younger ) pos of current window
@@ -40,7 +40,7 @@ vbell off
 # %c        : now time (24 hours)
 caption always "%{= wb} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wk} [%l] %{=b wb}%y/%m/%d %c"
 
-# key settings
+# key settings {{{1
 # use ctrl+j to handling screen
 escape ^Jj
 
@@ -54,4 +54,5 @@ bind b windowlist
 defbce "on"
 term xterm-256color
 
-# vim: ts=4 sw=4 sts=0 et
+# }}}
+# vim: ts=4 sw=4 sts=0 et fdm=marker fdc=3
