Simplify header comments

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,7 +1,5 @@
 " .vimperatorrc
-" author janus_wel <janus.wel.3@gmail.com>
-" for 2.0pre (created: 2008/12/10 07:30:02)
-" Last Change: 2009/12/02 16:06:10.
+" janus_wel <janus.wel.3@gmail.com>
 
 " options {{{1
 " safe mode
