--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -143,7 +143,8 @@ style -name iconize-tab chrome://* .tabbrowser-tab:not([pinned]) { min-width: 28
 
 " source extra resources {{{1
 " javascript
-source ~/.vimperatorrc.js
+source ~/.vimperator/options.js
+source ~/.vimperator/mappings.js
 
 
 " autocmd {{{1
