--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -152,21 +152,7 @@ source ~/.vimperator/mappings.js
 autocmd!
 
 " fmap {{{2
-" all clear
-autocmd LocationChange .* :fmapc
-
-" Fastladder
-" pass through default keybinds
-autocmd LocationChange http://fastladder\\.com/reader/ :fmap j k s a p o q w r <Del>
-autocmd LocationChange http://fastladder\\.com/reader/ :fmap J,<Space> K,<S-Space> <,> >,< /,f
-
-" Remember the Milk
-" add / complete / edit / delete tasks
-autocmd LocationChange https?://www\\.rememberthemilk\\.com/home/[^/]+/#section\\.tasks :fmap C,t c V,p v,d w,f q,g s Q,u W,l S,y I,r U,z <C-1>,1 <C-2>,2 <C-3>,3 <C-0>,4 <Del>
-" select tasks / tab switch / multiple mode
-autocmd LocationChange https?://www\\.rememberthemilk\\.com/home/[^/]+/#section\\.tasks :fmap a n k j i h m
-" list switch
-autocmd LocationChange https?://www\\.rememberthemilk\\.com/home/[^/]+/#section\\.tasks :fmap <C-S-h>,<C-S-Left> <C-S-l>,<C-S-Right>
+autocmd VimperatorEnter .* :source ~/.vimperator/fmaps.vimp
 
 
 " finish {{{1
