Follow last version for changing pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,8 @@ unbind l
 bind h previous-window
 bind l next-window
 
-bind j down-pane
-bind k up-pane
+bind j select-pane -t :.+
+bind k select-pane -t :.-
 
 # }}}
 # vim: ts=4 sw=4 sts=0 et fdm=marker fdc=3
