Add alias to overwrite remote branch's history

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,5 +9,6 @@
 [alias]
     co = checkout
     graph = log --graph --all --oneline --decorate
+    overwrite = push --force-with-lease
 [core]
     pager = less -R
